--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: $fixed-header-height;
 }
 body {
     background-color: $white-smoke;
