--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -31,9 +31,9 @@
     @include mq(tablet) {
         flex: 2;
     }
-    p {
-        margin-bottom: 3rem;
-    }
+}
+.about-me {
+    margin-bottom: 3rem;
 }
 
 /* Bubbles */
@@ -66,13 +66,6 @@
     overflow: hidden;
     z-index: 1;
     margin-bottom: 2rem;
-
-    // @include mq(tablet) {
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: flex-start;
-    //     flex: 1;
-    // }
 }
 .tablinks {
     font-size: 1.5rem;
@@ -136,7 +129,7 @@
     justify-content: center;
     align-items: center;
     flex: 1;
-    // gap: 3rem;
+    gap: 3rem;
 }
 .skills-item {
     display: flex;
